--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
             " 
             onmouseover="this.style.background='linear-gradient(to right, #003d82, #0056b3)'; this.style.transform='scale(1.05)';" 
             onmouseout="this.style.background='linear-gradient(to right, #0056b3, #003d82)'; this.style.transform='scale(1)';">
-                Attainment
+               Automated Attainment Calculator
             </button></a>
         </div>
     </header>
